--- a/Crunchers/Crunchers.csproj
+++ b/Crunchers/Crunchers.csproj
@@ -204,6 +204,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Views\Admin\ManageShop.cshtml" />
+    <Content Include="Views\Manage\Orders.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
