--- a/Crunchers/packages.config
+++ b/Crunchers/packages.config
@@ -18,6 +18,9 @@
   <package id="Microsoft.AspNet.Razor.ru" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization.ru" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
@@ -52,5 +55,7 @@
   <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="Unity" version="5.11.1" targetFramework="net461" />
+  <package id="Unity.WebAPI" version="5.4.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
