--- a/Crunchers/Crunchers.csproj
+++ b/Crunchers/Crunchers.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\Admin\ManageCharacteristics.cshtml" />
     <Content Include="Views\Admin\ManageOrders.cshtml" />
     <Content Include="Views\Admin\ManageCategoryProducts.cshtml" />
+    <Content Include="Views\Admin\ManageProduct.cshtml" />
     <Content Include="Views\Admin\ManageShop.cshtml" />
     <Content Include="Views\Manage\Orders.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
