--- a/Crunchers/Crunchers.csproj
+++ b/Crunchers/Crunchers.csproj
@@ -235,6 +235,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CatalogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
@@ -291,6 +292,8 @@
     <Content Include="Views\Admin\ManageProduct.cshtml" />
     <Content Include="Views\Admin\ManageShop.cshtml" />
     <Content Include="Views\Admin\ManageFiltersByCharacteristicId.cshtml" />
+    <Content Include="Views\Catalog\CategoryProducts.cshtml" />
+    <Content Include="Views\Catalog\Index.cshtml" />
     <Content Include="Views\Manage\Orders.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
     <Content Include="Web.config" />
