--- a/Crunchers/Crunchers.csproj
+++ b/Crunchers/Crunchers.csproj
@@ -251,9 +251,11 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\AdminViewModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MarkModel.cs" />
     <Compile Include="Models\OrderModels.cs" />
     <Compile Include="Models\PointsOfPickUpModel.cs" />
     <Compile Include="Models\ProductModel.cs" />
+    <Compile Include="Models\ReviewModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -295,6 +297,7 @@
     <Content Include="Views\Admin\ManageFiltersByCharacteristicId.cshtml" />
     <Content Include="Views\Catalog\CategoryProducts.cshtml" />
     <Content Include="Views\Catalog\Index.cshtml" />
+    <Content Include="Views\Catalog\Product.cshtml" />
     <Content Include="Views\Manage\ChangeCity.cshtml" />
     <Content Include="Views\Manage\Orders.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
