--- a/Crunchers/Web.config
+++ b/Crunchers/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=tcp:crunchersdbserver.database.windows.net,1433;Initial Catalog=crunchers_db;Persist Security Info=False;User ID=crunchers;Password=HellSatan0;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-  <add name = "ShopDbConnection" connectionString="Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=password"/>
+  <!--<add name = "ShopDbConnection" connectionString="Host=database-1.cgmrlrsb1yta.us-east-1.rds.amazonaws.com;Port=5432;Database=shopdb;Username=postgres;Password=12345678"/>-->
+	  <add name = "ShopDbConnection" connectionString="Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=password"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
