--- a/Arshinov.WebApp/appsettings.json
+++ b/Arshinov.WebApp/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=usersstoredb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=tcp:crunchers.database.windows.net,1433;Initial Catalog=Crunchers;Persist Security Info=False;User ID=admin123;Password=321nimdA;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "ShopDbConnection": "Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=password"
   }
 }
