fix images with space in name

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/Crunchers/UploadedFiles/*
+
 # Created by https://www.gitignore.io/api/rider,dotnetcore,aspnetcore,visualstudio
 # Edit at https://www.gitignore.io/?templates=rider,dotnetcore,aspnetcore,visualstudio
 
