[ADD]Top Products

--- a/Crunchers/Web.config
+++ b/Crunchers/Web.config
@@ -17,8 +17,8 @@
              providerName="System.Data.SqlClient" />
         <!--<add name="ShopDbConnection"
               connectionString="Host=database-1.cgmrlrsb1yta.us-east-1.rds.amazonaws.com;Port=5432;Database=shopdb;Username=postgres;Password=12345678" />-->
-            <add name = "ShopDbConnection" connectionString="Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=admin"/>
-        <!--<add name = "ShopDbConnection" connectionString="Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=password"/>-->
+        <!--<add name = "ShopDbConnection" connectionString="Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=admin"/>-->
+        <add name = "ShopDbConnection" connectionString="Host=localhost;Port=5432;Database=shopdb;Username=postgres;Password=password"/>
     </connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0" />
