--- a/Crunchers/Web.config
+++ b/Crunchers/Web.config
@@ -29,7 +29,7 @@
     <system.web>
         <authentication mode="None" />
         <compilation debug="true" targetFramework="4.6.1" />
-        <httpRuntime targetFramework="4.6.1"/>
+        <httpRuntime targetFramework="4.6.1" maxQueryStringLength="32768" maxUrlLength="65536"/>
     </system.web>
     <system.webServer>
         <modules>
