--- a/Crunchers/packages.config
+++ b/Crunchers/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
@@ -48,6 +49,7 @@
   <package id="Npgsql" version="4.1.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
